test: create all tests of FighterController, GameController and PublisherController (folder 01-acr-trb/h, project streetfighter).